# gtest-template

./: CMakeLists.txt  LICENSE  README  main.cpp
src/: CMakeLists.txt  factorialcomputer.cpp  factorialcomputer.h
test/: CMakeLists.txt  GTest.cmake  factorialcomputertest_test.cpp
